--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_cloud_firestore: ^5.4.4
   lottie: ^3.3.1
   google_sign_in: ^6.3.0
+  stylish_bottom_bar: ^1.1.1
 
 dev_dependencies:
   flutter_test:
