--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   lottie: ^3.3.1
   google_sign_in: ^6.3.0
   stylish_bottom_bar: ^1.1.1
+  # jitsi_meet_flutter_sdk: ^11.2.0
 
 dev_dependencies:
   flutter_test:
